--- a/image-preview.html
+++ b/image-preview.html
@@ -20,8 +20,6 @@
 	</head>
 
 	<body>
-		<div class='cip-image-preview' >
-			<img src='assets/img/mockup-preview.png' />
-		</div>
+		No longer available, please go to <a href='cytancy.github.io/CIP/'>cytancy.github.io/CIP/</a>.
 	</body>
 </html>
