--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 				<div class='cip-row-content'>
 					<div class='cip-prefold-nav'>
 						<div class='cip-prefold-nav-logo cip-hidden'>
-							<svg class='cip-prefold-nav-logo-cru'  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 444 150.047">
+							<svg class='cip-prefold-nav-logo-cru' xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 444 150.047">
 								<path class='cip-prefold-nav-logo-c' d="M253.305,310.695a57,57,0,1,0,0,80.61" transform="translate(-138 -275.992)" style="fill: none;stroke: #000;stroke-miterlimit: 10;stroke-width: 36px"/>
 								<path class='cip-prefold-nav-logo-r-1' d="M317.843,426l.291-131.995,48.146.035a35.247,35.247,0,0,1,0,70.494l-48.023-.035" transform="translate(-138 -275.992)" style="fill: none;stroke: #000;stroke-miterlimit: 10;stroke-width: 36px"/>
 								<line class='cip-prefold-nav-logo-r-2' x1="226.958" y1="88.539" x2="265.715" y2="158.708" style="fill: none;stroke: #000;stroke-miterlimit: 10;stroke-width: 36px"/>
@@ -55,25 +55,25 @@
 							<div class='cip-prefold-header'>
 								<div class='cip-prefold-header-main'>
 									<div class='cip-prefold-header-main-a'>
-										<div class='cip-prefold-header-main-text cip-hidden'>Time</div>
+										<div class='cip-prefold-header-main-text cip-hidden'>Making</div>
 										<div class='cip-prefold-header-main-cover cip-hidden'></div>
 									</div>
 									<div class='cip-prefold-header-main-b'>
-										<div class='cip-prefold-header-main-text cip-hidden'>Money</div>
+										<div class='cip-prefold-header-main-text cip-hidden'>Data</div>
 										<div class='cip-prefold-header-main-cover cip-hidden'></div>
 									</div>
 									<div class='cip-prefold-header-main-c'>
-										<div class='cip-prefold-header-main-text cip-hidden'>Data</div>
+										<div class='cip-prefold-header-main-text cip-hidden'>Delightful</div>
 										<div class='cip-prefold-header-main-cover cip-hidden'></div>
 									</div>
 								</div>
 								<div class='cip-prefold-header-sub'>
 									<div class='cip-prefold-header-sub-message'>
-										<div class='cip-prefold-header-sub-message-text cip-hidden'>No need to choose. You can have it all.</div>
+										<div class='cip-prefold-header-sub-message-text cip-hidden'>No headaches. Just data.</div>
 										<div class='cip-prefold-header-sub-message-cover cip-hidden'></div>
 									</div>
 									<div class='cip-prefold-header-sub-link'>
-										<div class='cip-prefold-header-sub-link-text cip-hidden'>Find out how.<div class='cip-prefold-header-sub-link-underline'></div></div>
+										<div class='cip-prefold-header-sub-link-text cip-hidden'>Learn more.<div class='cip-prefold-header-sub-link-underline'></div></div>
 										<div class='cip-prefold-header-sub-link-cover cip-hidden'></div>
 									</div>
 								</div>
@@ -82,7 +82,7 @@
 								<div class='cip-prefold-graphic-content'>
 									<div class='cip-prefold-graphic-content-media'>
 										<video class='cip-prefold-graphic-content-media-video cip-hidden' playsinline muted loop>
-											<source src="assets/video/sample-c.mp4" type="video/mp4">
+											<source src="assets/video/background.mp4" type="video/mp4">
 										</video>
 										<div class='cip-prefold-graphic-content-media-cover cip-hidden'></div>
 									</div>
@@ -137,7 +137,7 @@
 							<div class='cip-about-message-title-text'>
 								Our Crux<br>to Bear
 								<div class='cip-about-message-title-bear cip-hidden'>
-									<img class='cip-about-message-title-bear-graphic' src='assets/img/bear.svg'/>
+									<img class='cip-about-message-title-bear-graphic' src='assets/img/bear.svg' />
 									<div class='cip-about-message-title-bear-cover'></div>
 								</div>
 							</div>
@@ -156,9 +156,275 @@
 				</div>
 			</div>
 			<div class='cip-row cip-team'>
+				<div class='cip-team-header'>
+					<div class='cip-team-header-half-bg'></div>
+					<svg class='cip-team-header-lines' xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 1600 120" shape-rendering='crispEdges' preserveAspectRatio='none'>
+						 <polyline class='cip-team-header-line-left' points="0,60 500,60 500,1 1100,1 1100,60" vector-effect='non-scaling-stroke'/>
+						 <polyline class='cip-team-header-line-right' points="1600,60 1100,60 1100,119 500,119 500,60" vector-effect='non-scaling-stroke'/>
+					</svg>
+					<div class='cip-team-header-line-right'></div>
+					<div class='cip-team-header-title'>DREAM TEAM</div>
+				</div>
 				<div class='cip-row-content'>
-					<div class='cip-row cip-team-temp-title'>Work In Progress</div>
-					<div class='cip-row cip-team-temp-subtitle'>Scroll back up to see the animations again. Keep in mind previous sections must be off screen before animations reset.</div>
+					<div class='cip-team-message'>Our experts are the best of the best.<br><span>Hover</span> to learn more.</div>
+					<div class='cip-team-portrait-row'>
+						<div class='cip-team-portrait-item cip-team-portrait-item-faded'>
+							<div class='cip-team-portrait-item-visual'>
+								<div class='cip-team-portrait-item-visual-cover'></div>
+								<img class='cip-team-portrait-item-visual-image' src='assets/img/faces/bruce.svg' />
+							</div>
+						</div>
+						<div class='cip-team-portrait-item'>
+							<div class='cip-team-portrait-item-visual'>
+								<div class='cip-team-portrait-item-visual-cover'></div>
+								<img class='cip-team-portrait-item-visual-image' src='assets/img/faces/philip.svg' />
+							</div>
+							<div class='cip-team-portrait-item-name'>Philip Brittan</div>
+							<div class='cip-team-portrait-item-descriptor'>Very handsome.</div>
+						</div>
+						<div class='cip-team-portrait-item'>
+							<div class='cip-team-portrait-item-visual'>
+								<div class='cip-team-portrait-item-visual-cover'></div>
+								<img class='cip-team-portrait-item-visual-image' src='assets/img/faces/larry.svg' />
+							</div>
+							<div class='cip-team-portrait-item-name'>Larry Leibowitz</div>
+							<div class='cip-team-portrait-item-descriptor'>Very old.<br>Sorry, "experienced".</div>
+						</div>
+						<div class='cip-team-portrait-item'>
+							<div class='cip-team-portrait-item-visual'>
+								<div class='cip-team-portrait-item-visual-cover'></div>
+								<img class='cip-team-portrait-item-visual-image' src='assets/img/faces/elizabeth.svg' />
+							</div>
+							<div class='cip-team-portrait-item-name'>Elizabeth Pritchard</div>
+							<div class='cip-team-portrait-item-descriptor'>Very smart.</div>
+						</div>
+						<div class='cip-team-portrait-item'>
+							<div class='cip-team-portrait-item-visual'>
+								<div class='cip-team-portrait-item-visual-cover'></div>
+								<img class='cip-team-portrait-item-visual-image' src='assets/img/faces/jonathan.svg' />
+							</div>
+							<div class='cip-team-portrait-item-name'>Jonathan Major</div>
+							<div class='cip-team-portrait-item-descriptor'>Majorly cool.</div>
+						</div>
+						<div class='cip-team-portrait-item cip-team-portrait-item-faded'>
+							<div class='cip-team-portrait-item-visual'>
+								<div class='cip-team-portrait-item-visual-cover'></div>
+								<img class='cip-team-portrait-item-visual-image' src='assets/img/faces/kelly.svg' />
+							</div>
+						</div>
+					</div>
+					<div class='cip-team-portrait-row'>
+						<div class='cip-team-portrait-item cip-team-portrait-item-faded'>
+							<div class='cip-team-portrait-item-visual'>
+								<div class='cip-team-portrait-item-visual-cover'></div>
+								<img class='cip-team-portrait-item-visual-image' src='assets/img/faces/wip-b.svg' />
+							</div>
+						</div>
+						<div class='cip-team-portrait-item cip-team-portrait-item-faded'>
+							<div class='cip-team-portrait-item-visual'>
+								<div class='cip-team-portrait-item-visual-cover'></div>
+								<img class='cip-team-portrait-item-visual-image' src='assets/img/faces/snehal.svg' />
+							</div>
+						</div>
+						<div class='cip-team-portrait-item'>
+							<div class='cip-team-portrait-item-visual'>
+								<div class='cip-team-portrait-item-visual-cover'></div>
+								<img class='cip-team-portrait-item-visual-image' src='assets/img/faces/ashu.svg' />
+							</div>
+							<div class='cip-team-portrait-item-name'>Ashu Sikri</div>
+							<div class='cip-team-portrait-item-descriptor'>Very strategic.</div>
+						</div>
+						<div class='cip-team-portrait-item'>
+							<div class='cip-team-portrait-item-visual'>
+								<div class='cip-team-portrait-item-visual-cover'></div>
+								<img class='cip-team-portrait-item-visual-image' src='assets/img/faces/andrew.svg' />
+							</div>
+							<div class='cip-team-portrait-item-name'>Andrew Clark</div>
+							<div class='cip-team-portrait-item-descriptor'>Very tall.</div>
+						</div>
+						<div class='cip-team-portrait-item'>
+							<div class='cip-team-portrait-item-visual'>
+								<div class='cip-team-portrait-item-visual-cover'></div>
+								<img class='cip-team-portrait-item-visual-image' src='assets/img/faces/dave.svg' />
+							</div>
+							<div class='cip-team-portrait-item-name'>David Tong</div>
+							<div class='cip-team-portrait-item-descriptor'>Very British.</div>
+						</div>
+						<div class='cip-team-portrait-item cip-team-portrait-item-faded'>
+							<div class='cip-team-portrait-item-visual'>
+								<div class='cip-team-portrait-item-visual-cover'></div>
+								<img class='cip-team-portrait-item-visual-image' src='assets/img/faces/johnette.svg' />
+							</div>
+						</div>
+						<div class='cip-team-portrait-item cip-team-portrait-item-faded'>
+							<div class='cip-team-portrait-item-visual'>
+								<div class='cip-team-portrait-item-visual-cover'></div>
+								<img class='cip-team-portrait-item-visual-image' src='assets/img/faces/wip-a.svg' />
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class='cip-row cip-consumer'>
+				<div class='cip-row-content'>
+					<div class='cip-consumer-title'>The Deal with Data</div>
+					<div class='cip-consumer-message-a'>
+						<div class='cip-consumer-message-a-text'>Buying data and selling data. There are many steps in between. Sometimes it takes so long that deals end up abandoned and weeks of effort go to waste.</div>
+						<div class='cip-consumer-message-a-numbers'>1. 2. 3. 4. 5. 6. 7. 8. 9. 10. 11. 12. 13. 14. 15. 16. 17. 18. 19. 20. 21. 22. 23. 24. 25. 26</div>
+					</div>
+					<div class='cip-consumer-message-row'>
+						<div class='cip-consumer-message-b'>
+							<div class='cip-consumer-message-b-bubble'>
+								<div class='cip-consumer-message-b-bubble-text'>It starts with enthusiastic<br>calls…</div>
+								<svg class='cip-consumer-message-b-bubble-triangle' xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 12">
+						 			<polyline points="0,0 24,0 12,12" fill='#FFF'/>
+						 		</svg>
+							</div>
+							<div class='cip-consumer-message-b-visual'>
+								<img class='cip-consumer-message-b-visual-graphic' src='assets/img/consumer-a-laughing.svg' />
+							</div>
+							<div class='cip-consumer-message-b-cover'></div>
+						</div>
+						<div class='cip-consumer-message-c'>
+							<div class='cip-consumer-message-c-bubble'>
+								<div class='cip-consumer-message-c-bubble-text'>…and ends with 12-days-since-<br>last-reply in the email thread.</div>
+								<svg class='cip-consumer-message-c-bubble-triangle' xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 12">
+						 			<polyline points="0,0 24,0 12,12" fill='#FFF'/>
+						 		</svg>
+							</div>
+							<div class='cip-consumer-message-c-visual'>
+								<img class='cip-consumer-message-c-visual-graphic' src='assets/img/consumer-b-angry.svg' />
+							</div>
+							<div class='cip-consumer-message-c-cover'></div>
+						</div>
+					</div>
+					<div class='cip-consumer-message-d'>
+						<div class='cip-consumer-message-d-text'>And then it hits you, you lost the deal. Again.</div>
+					</div>
+				</div>
+			</div>
+			<div class='cip-row cip-producer'>
+				<div class='cip-row-content'>
+					<div class='cip-producer-header'>
+						<div class='cip-producer-header-text'>Or what if you're the dealbreaker?</div>
+					</div>
+					<div class='cip-producer-visual-a'>
+						<div class='cip-producer-visual-a-content'>
+							<img class='cip-producer-visual-a-graphic' src='assets/img/producer-f-a.svg' />
+							<div class='cip-producer-visual-a-bg-box'></div>
+						</div>
+						<div class='cip-producer-visual-a-cover'></div>
+					</div>
+					<div class='cip-producer-message-a'>
+						<div class='cip-producer-message-a-text'>What if the reason you couldn't make the deal work was because cleaning<br>and pipelining the data would take too long. That there were bigger fish…</div>
+					</div>
+					<div class='cip-producer-visual-b'>
+						<div class='cip-producer-visual-b-content'>
+							<img class='cip-producer-visual-b-graphic' src='assets/img/producer-f-b.svg' />
+						</div>
+						<div class='cip-producer-visual-b-cover'></div>
+					</div>
+					<div class='cip-producer-message-b'>
+						<div class='cip-producer-message-b-text'>…and you didn't have the technical, logistical, or engineering resources to spare.<br> You called it “oppurtunity cost”, we call it lost potential. </div>
+					</div>
+				</div>
+			</div>
+			<div class='cip-row cip-quote'>
+				<div class='cip-row-content'>
+					<div class='cip-quote-header'>
+						<div class='cip-quote-header-text'>And the effort to meet in the first place?</div>
+					</div>
+					<div class='cip-quote-message-a'>
+						Whether it was a one time tip from a former colleague, weeks of cold calls, or a<br>pricey marketing campaign, just getting to the start wasn't easy.
+					</div>
+					<div class='cip-quote-message-b'>
+						So we said:
+					</div>
+					<div class='cip-quote-box'>
+						<div class='cip-quote-box-border'></div>
+						<div class='cip-quote-box-text'>Hey, this is painful. This isn't what working with data should look like.</div>
+						<img class='cip-quote-box-quote-left' src='assets/img/quote.svg' />
+						<img class='cip-quote-box-quote-right' src='assets/img/quote.svg' />
+					</div>
+					
+					<div class='cip-quote-message-c'>
+						<div class='cip-quote-message-b-text'>and we rolled up our sleeves and made this:</div>
+					</div>
+				</div>
+			</div>
+			<div class='cip-row cip-features'>
+				<div class='cip-row-content'>
+					<div class='cip-row cip-features-item'>
+						<img class='cip-row cip-features-item-graphic' src='assets/img/product-icon-a.svg' />
+						<div class='cip-row cip-features-item-title'>INFORMATICS PLATFORM</div>
+						<div class='cip-row cip-features-item-underline'></div>
+						<div class='cip-row cip-features-item-message'>A secure, scalable environment to store, explore and transform data delivered as an integrated cloud service. Use it to develop and manage the execution of programs and workflows.</div>
+					</div>
+					<div class='cip-row cip-features-item'>
+						<img class='cip-row cip-features-item-graphic' src='assets/img/product-icon-b.svg' />
+						<div class='cip-row cip-features-item-title'>DATA ENGINEERING</div>
+						<div class='cip-row cip-features-item-underline'></div>
+						<div class='cip-row cip-features-item-message'>A concierge service for data operations. Powered by skilled data scientists and machine learning “technologists” who become an extension of your team. Services include data production pipelines and “massaging” content to your needs.</div>
+					</div>
+					<div class='cip-row cip-features-item'>
+						<img class='cip-row cip-features-item-graphic' src='assets/img/product-icon-c.svg' />
+						<div class='cip-row cip-features-item-title'>MARKETPLACE</div>
+						<div class='cip-row cip-features-item-underline'></div>
+						<div class='cip-row cip-features-item-message'>A platform to trade actionable data in real time. For buyers, it’s a place to discover, evaluate, and compare data options. For sellers, it’s a neutral aggregation of data sources where you, emerging providers, and established vendors can succeed.</div>
+					</div>
+				</div>
+			</div>
+			<div class='cip-row cip-cta'>
+				<div class='cip-row-content'>
+					<div class='cip-cta-bg'>
+						<img class='cip-cta-bg-graphic' src='assets/img/cta-bg.svg' />
+					</div>
+					<div class='cip-cta-message'>And we called it:</div>
+					<div class='cip-cta-logo'>
+						<svg class='cip-cta-logo-cru' xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 444 150.047">
+							<path class='cip-cta-logo-c' d="M253.305,310.695a57,57,0,1,0,0,80.61" transform="translate(-138 -275.992)" style="fill: none;stroke: #000;stroke-miterlimit: 10;stroke-width: 36px"/>
+							<path class='cip-cta-logo-r-1' d="M317.843,426l.291-131.995,48.146.035a35.247,35.247,0,0,1,0,70.494l-48.023-.035" transform="translate(-138 -275.992)" style="fill: none;stroke: #000;stroke-miterlimit: 10;stroke-width: 36px"/>
+							<line class='cip-cta-logo-r-2' x1="226.958" y1="88.539" x2="265.715" y2="158.708" style="fill: none;stroke: #000;stroke-miterlimit: 10;stroke-width: 36px"/>
+							<path class='cip-cta-logo-u' d="M472,294v67.958C472,383.817,487.125,408,518,408s46-24.183,46-46.042V294" transform="translate(-138 -275.992)" style="fill: none;stroke: #000;stroke-linecap: square;stroke-miterlimit: 10;stroke-width: 36px"/>
+						</svg>
+						<div class='cip-cta-logo-x'>
+							<div class='cip-cta-logo-x-1'>
+								<div class='cip-cta-logo-x-1-fill'></div>
+								<div class='cip-cta-logo-x-1-cover'></div>
+							</div>
+							<div class='cip-cta-logo-x-2'>
+								<div class='cip-cta-logo-x-2-fill'></div>
+								<div class='cip-cta-logo-x-2-cover'></div>
+							</div>
+						</div>
+					</div>
+					<div class='cip-cta-try-button'>
+						<div class='cip-cta-try-button-text'>TRY IT NOW</div>
+						<div class='cip-cta-try-button-cover'></div>
+					</div>
+					<div class='cip-cta-talk-button'>
+						<div class='cip-cta-talk-button-text'>LET'S TALK</div>
+						<div class='cip-cta-talk-button-cover'></div>
+					</div>
+				</div>
+			</div>
+			<div class='cip-row cip-footer'>
+				<div class='cip-row-content'>
+					<div class='cip-footer-whitepaper'>
+						<div class='cip-footer-whitepaper-box'></div>
+						<img class='cip-footer-whitepaper-icon' src='assets/img/pdf-icon.svg' />
+						<div class='cip-footer-whitepaper-text'>Download Our<br>Whitepaper</div>
+					</div>
+					<div class='cip-footer-social'>
+						<img class='cip-footer-social-button' src='assets/img/social-icon-linkedin.svg'/>
+						<img class='cip-footer-social-button' src='assets/img/social-icon-twitter.svg'/>
+						<img class='cip-footer-social-button' src='assets/img/social-icon-google-plus.svg'/>
+						<img class='cip-footer-social-button' src='assets/img/social-icon-github.svg'/>
+					</div>
+					<div class='cip-footer-bottom'>
+						<div class='cip-footer-copyright'>© 2017 Crux | Crux Informatics Inc. All Rights Reserved.</div>
+						<img class='cip-footer-logo' src='assets/img/logo-white.svg' />
+					</div>
 				</div>
 			</div>
 		</div>
