--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 					<div class='cip-team-header-title'>DREAM TEAM</div>
 				</div>
 				<div class='cip-row-content'>
-					<div class='cip-team-message'>Our experts are the best of the best.<br><span>Hover</span> to learn more.</div>
+					<div class='cip-team-message'>With experts like these, delight comes easy.<br><span>Hover</span> to learn more.</div>
 					<div class='cip-team-portrait-row'>
 						<div class='cip-team-portrait-item cip-team-portrait-item-faded'>
 							<div class='cip-team-portrait-item-visual'>
@@ -269,7 +269,7 @@
 				<div class='cip-row-content'>
 					<div class='cip-consumer-title'>The Deal with Data</div>
 					<div class='cip-consumer-message-a'>
-						<div class='cip-consumer-message-a-text'>Buying data and selling data. There are many steps in between. Sometimes it takes so long that deals end up abandoned and weeks of effort go to waste.</div>
+						<div class='cip-consumer-message-a-text'>Buying and selling data. There are many steps in between. Sometimes it takes so long that deals end up abandoned and weeks of effort go to waste.</div>
 						<div class='cip-consumer-message-a-numbers'>1. 2. 3. 4. 5. 6. 7. 8. 9. 10. 11. 12. 13. 14. 15. 16. 17. 18. 19. 20. 21. 22. 23. 24. 25. 26</div>
 					</div>
 					<div class='cip-consumer-message-row'>
@@ -345,10 +345,21 @@
 						So we said:
 					</div>
 					<div class='cip-quote-box'>
-						<div class='cip-quote-box-border'></div>
-						<div class='cip-quote-box-text'>Hey, this is painful. This isn't what working with data should look like.</div>
-						<img class='cip-quote-box-quote-left' src='assets/img/quote.svg' />
-						<img class='cip-quote-box-quote-right' src='assets/img/quote.svg' />
+						<div class='cip-quote-box-display'>
+							<div class='cip-quote-box-content'>
+								<div class='cip-quote-box-border'></div>
+								<div class='cip-quote-box-text'>Hey, this is painful. This isn't what working with data should look like.</div>
+							</div>
+							<div class='cip-quote-box-cover'></div>
+						</div>
+						<div class='cip-quote-box-quote-left'>
+							<img class='cip-quote-box-quote-left-graphic' src='assets/img/quote.svg' />
+							<div class='cip-quote-box-quote-left-cover'></div>
+						</div>
+						<div class='cip-quote-box-quote-right'>
+							<img class='cip-quote-box-quote-right-graphic' src='assets/img/quote.svg' />
+							<div class='cip-quote-box-quote-right-cover'></div>
+						</div>
 					</div>
 					
 					<div class='cip-quote-message-c'>
@@ -358,23 +369,39 @@
 			</div>
 			<div class='cip-row cip-features'>
 				<div class='cip-row-content'>
-					<div class='cip-row cip-features-item'>
-						<img class='cip-row cip-features-item-graphic' src='assets/img/product-icon-a.svg' />
-						<div class='cip-row cip-features-item-title'>INFORMATICS PLATFORM</div>
-						<div class='cip-row cip-features-item-underline'></div>
-						<div class='cip-row cip-features-item-message'>A secure, scalable environment to store, explore and transform data delivered as an integrated cloud service. Use it to develop and manage the execution of programs and workflows.</div>
+					<div class='cip-features-item'>
+						<div class='cip-features-item-header'>
+							<div class='cip-features-item-header-content'>
+								<img class='cip-features-item-graphic' src='assets/img/product-icon-a.svg' />
+								<div class='cip-features-item-title'>INFORMATICS PLATFORM</div>
+								<div class='cip-features-item-underline'></div>
+							</div>
+							<div class='cip-features-item-header-cover'></div>
+						</div>
+						
+						<div class='cip-features-item-message'>A secure, scalable environment to store, explore and transform data delivered as an integrated cloud service. Use it to develop and manage the execution of programs and workflows.</div>
 					</div>
-					<div class='cip-row cip-features-item'>
-						<img class='cip-row cip-features-item-graphic' src='assets/img/product-icon-b.svg' />
-						<div class='cip-row cip-features-item-title'>DATA ENGINEERING</div>
-						<div class='cip-row cip-features-item-underline'></div>
-						<div class='cip-row cip-features-item-message'>A concierge service for data operations. Powered by skilled data scientists and machine learning “technologists” who become an extension of your team. Services include data production pipelines and “massaging” content to your needs.</div>
+					<div class='cip-features-item'>
+						<div class='cip-features-item-header'>
+							<div class='cip-features-item-header-content'>
+								<img class='cip-features-item-graphic' src='assets/img/product-icon-b.svg' />
+								<div class='cip-features-item-title'>DATA ENGINEERING</div>
+								<div class='cip-features-item-underline'></div>
+							</div>
+							<div class='cip-features-item-header-cover'></div>
+						</div>
+						<div class='cip-features-item-message'>A concierge service for data operations. Powered by skilled data scientists and machine learning “technologists” who become an extension of your team. Services include data production pipelines and “massaging” content to your needs.</div>
 					</div>
-					<div class='cip-row cip-features-item'>
-						<img class='cip-row cip-features-item-graphic' src='assets/img/product-icon-c.svg' />
-						<div class='cip-row cip-features-item-title'>MARKETPLACE</div>
-						<div class='cip-row cip-features-item-underline'></div>
-						<div class='cip-row cip-features-item-message'>A platform to trade actionable data in real time. For buyers, it’s a place to discover, evaluate, and compare data options. For sellers, it’s a neutral aggregation of data sources where you, emerging providers, and established vendors can succeed.</div>
+					<div class='cip-features-item'>
+						<div class='cip-features-item-header'>
+							<div class='cip-features-item-header-content'>
+								<img class='cip-features-item-graphic' src='assets/img/product-icon-c.svg' />
+								<div class='cip-features-item-title'>MARKETPLACE</div>
+								<div class='cip-features-item-underline'></div>
+							</div>
+							<div class='cip-features-item-header-cover'></div>
+						</div>
+						<div class='cip-features-item-message'>A platform to trade actionable data in real time. For buyers, it’s a place to discover, evaluate, and compare data options. For sellers, it’s a neutral aggregation of data sources where you, emerging providers, and established vendors can succeed.</div>
 					</div>
 				</div>
 			</div>
@@ -415,9 +442,12 @@
 			<div class='cip-row cip-footer'>
 				<div class='cip-row-content'>
 					<div class='cip-footer-whitepaper'>
-						<div class='cip-footer-whitepaper-box'></div>
-						<img class='cip-footer-whitepaper-icon' src='assets/img/pdf-icon.svg' />
-						<div class='cip-footer-whitepaper-text'>Download Our<br>Whitepaper</div>
+						<div class='cip-footer-whitepaper-content'>
+							<div class='cip-footer-whitepaper-box'></div>
+							<img class='cip-footer-whitepaper-icon' src='assets/img/pdf-icon.svg' />
+							<div class='cip-footer-whitepaper-text'>Download Our<br>Whitepaper</div>
+						</div>
+						<div class='cip-footer-whitepaper-cover'></div>
 					</div>
 					<div class='cip-footer-social'>
 						<img class='cip-footer-social-button' src='assets/img/social-icon-linkedin.svg'/>
