--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 								</div>
 								<div class='cip-prefold-header-sub'>
 									<div class='cip-prefold-header-sub-message'>
-										<div class='cip-prefold-header-sub-message-text cip-hidden'>No headaches. Just data.</div>
+										<div class='cip-prefold-header-sub-message-text cip-hidden'>Data is hard. We make it easy.</div>
 										<div class='cip-prefold-header-sub-message-cover cip-hidden'></div>
 									</div>
 									<div class='cip-prefold-header-sub-link'>
@@ -166,7 +166,7 @@
 					<div class='cip-team-header-title'>DREAM TEAM</div>
 				</div>
 				<div class='cip-row-content'>
-					<div class='cip-team-message'>With experts like these, delight comes easy.<br><span>Hover</span> to learn more.</div>
+					<div class='cip-team-message'>With experts like these, data and delight go hand in hand.<br><span>Hover</span> to learn more.</div>
 					<div class='cip-team-portrait-row'>
 						<div class='cip-team-portrait-item cip-team-portrait-item-faded'>
 							<div class='cip-team-portrait-item-visual'>
